Validate presence/validity of holiday_2_end_date
As per the guidance in the GOV.UK Design System[1]: "Check the entire
date, not the day, month and year separately."

Note that if any/all of the day, month or year have been entered but
`holiday_2_end_date` is empty then we can assume it's invalid because it
implies that parsing the date has failed.

[1]: https://design-system.service.gov.uk/components/date-input/#error-messages

--- a/app/views/supply_teachers/journey/temp_to_perm_calculator.html.erb
+++ b/app/views/supply_teachers/journey/temp_to_perm_calculator.html.erb
@@ -250,14 +250,14 @@
         <% end %>
       <% end %>
 
-      <%= govuk_form_group_with_optional_error(@journey, :holiday_2_end_date_day, :holiday_2_end_date_month, :holiday_2_end_date_year) do %>
-        <%= govuk_fieldset_with_optional_error(@journey, :holiday_2_end_date_day, :holiday_2_end_date_month, :holiday_2_end_date_year) do %>
+      <%= govuk_form_group_with_optional_error(@journey, :holiday_2_end_date) do %>
+        <%= govuk_fieldset_with_optional_error(@journey, :holiday_2_end_date) do %>
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
             <h1 class="govuk-fieldset__heading">
               <%= t('.holiday_2_end_date_question') %>
             </h1>
           </legend>
-          <%= display_errors(@journey, :holiday_2_end_date_day, :holiday_2_end_date_month, :holiday_2_end_date_year) %>
+          <%= display_errors(@journey, :holiday_2_end_date) %>
           <span id="holiday-2-end-date-hint" class="govuk-hint">
             <%= t('.holiday_2_end_date_question_hint') %>
           </span>
@@ -267,7 +267,7 @@
                 <label class="govuk-label govuk-date-input__label" for="holiday_2_end_date_day">
                   Day
                 </label>
-                <%= text_field_tag :holiday_2_end_date_day, @journey.current_step.holiday_2_end_date_day, pattern: '[0-9]*', class: css_classes_for_input(@journey, :holiday_2_end_date_day, %w[govuk-date-input__input govuk-input--width-2]) %>
+                <%= text_field_tag :holiday_2_end_date_day, @journey.current_step.holiday_2_end_date_day, pattern: '[0-9]*', class: css_classes_for_input(@journey, :holiday_2_end_date, %w[govuk-date-input__input govuk-input--width-2]) %>
               </div>
             </div>
             <div class="govuk-date-input__item">
@@ -275,7 +275,7 @@
                 <label class="govuk-label govuk-date-input__label" for="holiday_2_end_date_month">
                   Month
                 </label>
-                <%= text_field_tag :holiday_2_end_date_month, @journey.current_step.holiday_2_end_date_month, pattern: '[0-9]*', class: css_classes_for_input(@journey, :holiday_2_end_date_month, %w[govuk-date-input__input govuk-input--width-2]) %>
+                <%= text_field_tag :holiday_2_end_date_month, @journey.current_step.holiday_2_end_date_month, pattern: '[0-9]*', class: css_classes_for_input(@journey, :holiday_2_end_date, %w[govuk-date-input__input govuk-input--width-2]) %>
               </div>
             </div>
             <div class="govuk-date-input__item">
@@ -283,7 +283,7 @@
                 <label class="govuk-label govuk-date-input__label" for="holiday_2_end_date_year">
                   Year
                 </label>
-                <%= text_field_tag :holiday_2_end_date_year, @journey.current_step.holiday_2_end_date_year, pattern: '[0-9]*', class: css_classes_for_input(@journey, :holiday_2_end_date_year, %w[govuk-date-input__input govuk-input--width-4]) %>
+                <%= text_field_tag :holiday_2_end_date_year, @journey.current_step.holiday_2_end_date_year, pattern: '[0-9]*', class: css_classes_for_input(@journey, :holiday_2_end_date, %w[govuk-date-input__input govuk-input--width-4]) %>
               </div>
             </div>
           </div>
