Extract Google Analytics config into Marketplace module method
This removes a bit of duplication.

--- a/app/views/shared/_google_analytics.html.erb
+++ b/app/views/shared/_google_analytics.html.erb
@@ -1,9 +1,9 @@
-<% if ENV['GA_TRACKING_ID'].present? %>
-<script async src="https://www.googletagmanager.com/gtag/js?id=<%= ENV['GA_TRACKING_ID'] %>"></script>
+<% if Marketplace.ga_tracking_id.present? %>
+<script async src="https://www.googletagmanager.com/gtag/js?id=<%= Marketplace.ga_tracking_id %>"></script>
 <script>
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
-gtag('config', '<%= ENV['GA_TRACKING_ID'] %>', { 'anonymize_ip': true });
+gtag('config', '<%= Marketplace.ga_tracking_id %>', { 'anonymize_ip': true });
 </script>
 <% end %>
