--- a/app/views/shared/_google_analytics.html.erb
+++ b/app/views/shared/_google_analytics.html.erb
@@ -1,9 +1,9 @@
-<% if Marketplace.ga_tracking_id.present? %>
-<script async src="https://www.googletagmanager.com/gtag/js?id=<%= Marketplace.ga_tracking_id %>"></script>
+<% if Marketplace.google_analytics_tracking_id.present? %>
+<script async src="https://www.googletagmanager.com/gtag/js?id=<%= Marketplace.google_analytics_tracking_id %>"></script>
 <script>
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
-gtag('config', '<%= Marketplace.ga_tracking_id %>', { 'anonymize_ip': true });
+gtag('config', '<%= Marketplace.google_analytics_tracking_id %>', { 'anonymize_ip': true });
 </script>
 <% end %>
