--- a/app/views/supply_teachers/gateway/index.html.erb
+++ b/app/views/supply_teachers/gateway/index.html.erb
@@ -8,7 +8,7 @@
 
       <p>
         <%= link_to 'Sign in with beta credentials', cognito_sign_in_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8 ga-auth-cognito' %>
-        <% if DFE_SIGNIN_ENABLED %>
+        <% if Marketplace.dfe_signin_enabled? %>
           <%= link_to 'Sign in with DfE Sign-in', dfe_sign_in_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8 ga-auth-dfe' %>
         <% end %>
       </p>
