--- a/app/views/supply_teachers/journey/temp_to_perm_calculator.html.erb
+++ b/app/views/supply_teachers/journey/temp_to_perm_calculator.html.erb
@@ -210,14 +210,14 @@
         <% end %>
       <% end %>
 
-      <%= govuk_form_group_with_optional_error(@journey, :holiday_2_start_date_day, :holiday_2_start_date_month, :holiday_2_start_date_year) do %>
-        <%= govuk_fieldset_with_optional_error(@journey, :holiday_2_start_date_day, :holiday_2_start_date_month, :holiday_2_start_date_year) do %>
+      <%= govuk_form_group_with_optional_error(@journey, :holiday_2_start_date) do %>
+        <%= govuk_fieldset_with_optional_error(@journey, :holiday_2_start_date) do %>
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
             <h1 class="govuk-fieldset__heading">
               <%= t('.holiday_2_start_date_question') %>
             </h1>
           </legend>
-          <%= display_errors(@journey, :holiday_2_start_date_day, :holiday_2_start_date_month, :holiday_2_start_date_year) %>
+          <%= display_errors(@journey, :holiday_2_start_date) %>
           <span id="holiday-2-start-date-hint" class="govuk-hint">
             <%= t('.holiday_2_start_date_question_hint') %>
           </span>
@@ -227,7 +227,7 @@
                 <label class="govuk-label govuk-date-input__label" for="holiday_2_start_date_day">
                   Day
                 </label>
-                <%= text_field_tag :holiday_2_start_date_day, @journey.current_step.holiday_2_start_date_day, pattern: '[0-9]*', class: css_classes_for_input(@journey, :holiday_2_start_date_day, %w[govuk-date-input__input govuk-input--width-2]) %>
+                <%= text_field_tag :holiday_2_start_date_day, @journey.current_step.holiday_2_start_date_day, pattern: '[0-9]*', class: css_classes_for_input(@journey, :holiday_2_start_date, %w[govuk-date-input__input govuk-input--width-2]) %>
               </div>
             </div>
             <div class="govuk-date-input__item">
@@ -235,7 +235,7 @@
                 <label class="govuk-label govuk-date-input__label" for="holiday_2_start_date_month">
                   Month
                 </label>
-                <%= text_field_tag :holiday_2_start_date_month, @journey.current_step.holiday_2_start_date_month, pattern: '[0-9]*', class: css_classes_for_input(@journey, :holiday_2_start_date_month, %w[govuk-date-input__input govuk-input--width-2]) %>
+                <%= text_field_tag :holiday_2_start_date_month, @journey.current_step.holiday_2_start_date_month, pattern: '[0-9]*', class: css_classes_for_input(@journey, :holiday_2_start_date, %w[govuk-date-input__input govuk-input--width-2]) %>
               </div>
             </div>
             <div class="govuk-date-input__item">
@@ -243,7 +243,7 @@
                 <label class="govuk-label govuk-date-input__label" for="holiday_2_start_date_year">
                   Year
                 </label>
-                <%= text_field_tag :holiday_2_start_date_year, @journey.current_step.holiday_2_start_date_year, pattern: '[0-9]*', class: css_classes_for_input(@journey, :holiday_2_start_date_year, %w[govuk-date-input__input govuk-input--width-4]) %>
+                <%= text_field_tag :holiday_2_start_date_year, @journey.current_step.holiday_2_start_date_year, pattern: '[0-9]*', class: css_classes_for_input(@journey, :holiday_2_start_date, %w[govuk-date-input__input govuk-input--width-4]) %>
               </div>
             </div>
           </div>
