Make ST start page & 1st Q page copy consistent
As requested by Louise & Ellie:

* Change 2nd bullet point to make it clear they'll be hiring the
specific person *through and agency*.

* Change "supply" to "manage" on 1st answer option on 1st question page.
Louise says: "I think 'supply' here is wrong if someone has the name of
the person they want the agency to manage for them - the agency will
manage the person in either case and it's on the next page where the
user choose whether they want the agency to also supply the worker."

* Remove comma from 1st bullet point on ST start page.

--- a/app/views/supply_teachers/home/index.html.erb
+++ b/app/views/supply_teachers/home/index.html.erb
@@ -8,8 +8,8 @@
       <p class="govuk-body">Use this service to:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>find and hire a worker, using an agency</li>
-        <li>hire a specific person (a ‘nominated worker’)</li>
+        <li>find and hire a worker using an agency</li>
+        <li>hire a specific person using an agency (a ‘nominated worker’)</li>
         <li>find a managed service provider, who can take on all your temporary staff needs</li>
         <li>create a shortlist of suppliers based on your needs and download it</li>
         <li>calculate the maximum you could be charged to make your agency worker permanent</li>
