Link "what to do next" to framework page
The user can then, with some effort, obtain the order form Word
document.

--- a/app/views/supply_teachers/branches/index.html.erb
+++ b/app/views/supply_teachers/branches/index.html.erb
@@ -25,7 +25,8 @@
               <%= t('.do_next.contact_supplier') %>
             </li>
             <li>
-              <%= t('.do_next.sign_form') %>
+              <%= t('.do_next.sign_form_html',
+                    framework_url: 'https://ccs-agreements.cabinetoffice.gov.uk/contracts/rm3826') %>
             </li>
           </ul>
           <p class="govuk-body">
