Link directly to ST order form
As a backstop in case of link death, this is accompanied by a link to
the framework.

--- a/app/views/supply_teachers/branches/index.html.erb
+++ b/app/views/supply_teachers/branches/index.html.erb
@@ -26,6 +26,7 @@
             </li>
             <li>
               <%= t('.do_next.sign_form_html',
+                    form_url: 'https://ccs-agreements.cabinetoffice.gov.uk/sites/default/files/contracts/RM3826%20Supply%20Teachers%20-%20Order%20Form%20Template%20%28Short%20Form%29.docx',
                     framework_url: 'https://ccs-agreements.cabinetoffice.gov.uk/contracts/rm3826') %>
             </li>
           </ul>
