--- a/app/views/supply_teachers/home/index.html.erb
+++ b/app/views/supply_teachers/home/index.html.erb
@@ -36,9 +36,9 @@
 
       <h2 class="govuk-heading-m cmp-start-page__sub-heading">Accreditation of suppliers</h2>
 
-      <p class="govuk-body">All suppliers have undergone background screening and safeguarding to DfE's Keeping Children Safe in Education standards. They are audited and accredited against best practice standards in education recruitment.</p>
+      <p class="govuk-body">All suppliers have undergone background screening and safeguarding to DfE’s Keeping Children Safe in Education standards. They are audited and accredited against best practice standards in education recruitment.</p>
 
-      <h2 class="govuk-heading-m cmp-start-page__sub-heading">Buyers' obligations for supplier data</h2>
+      <h2 class="govuk-heading-m cmp-start-page__sub-heading">Buyers’ obligations for supplier data</h2>
 
       <p class="govuk-body">This service contains pricing information for suppliers on the Agency Supply Teachers framework agreement. This is confidential and can be considered commercially sensitive.</p>
 
