--- a/app/views/errors/422.html.erb
+++ b/app/views/errors/422.html.erb
@@ -2,6 +2,6 @@
 <h1>Errors#422</h1>
 <div>
   <h1>The change you wanted was rejected.</h1>
-  <p>Maybe you tried to change something you didn't have access to.</p>
+  <p>Maybe you tried to change something you didn’t have access to.</p>
 </div>
 </div>
