Add privacy policy link to main layout.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -113,6 +113,9 @@
         <div class="govuk-grid-column-two-thirds">
           <div class="govuk-footer__meta">
             <div class="govuk-footer__meta-item">
+              <a href="https://www.gov.uk/government/publications/crown-commercial-service-privacy-notice" aria-label= "<%= t('.privacy_link_aria_label') %>" class="ccs-footer__privacy ccs-no-print"><%= t(".privacy_link") %></a> 
+            </div>
+            <div class="govuk-footer__meta-item">
               <%= t(".crown_copyright") %>
             </div>
           </div>
