--- a/app/assets/stylesheets/components/footer/_footer.scss
+++ b/app/assets/stylesheets/components/footer/_footer.scss
@@ -18,6 +18,24 @@ body {
   flex: 1 0 auto; /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
 }
 
+a.ccs-footer__privacy {
+  background: none;
+  border: 0;
+  box-shadow: none;
+  font-family: $govuk-font-family;
+  font-weight: $govuk-font-weight-regular;
+  color: #FFF;
+  cursor: pointer;
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
+  &:focus {
+    outline: 3px solid govuk-colour("yellow");
+    outline-offset: 0;
+  }
+}
+
 .govuk-footer {
   background-color: $ccs_footer_bg;
   color: $ccs_footer_fg;
