Add a cookies policy page to the site.
This takes the cookie policy from the CCS website and
copies it, adjusting it where relevant.

If we add a cookie banner, this will have to be updated.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -113,7 +113,10 @@
         <div class="govuk-grid-column-two-thirds">
           <div class="govuk-footer__meta">
             <div class="govuk-footer__meta-item">
-              <a href="https://www.gov.uk/government/publications/crown-commercial-service-privacy-notice" aria-label= "<%= t('.privacy_link_aria_label') %>" class="ccs-footer__privacy ccs-no-print"><%= t(".privacy_link") %></a> 
+              <a href="/cookies" aria-label= "<%= t('.cookie_link_aria_label') %>" class="ccs-footer__links ccs-no-print"><%= t(".cookie_link") %></a>
+            </div>
+            <div class="govuk-footer__meta-item">
+              <a href="https://www.gov.uk/government/publications/crown-commercial-service-privacy-notice" aria-label= "<%= t('.privacy_link_aria_label') %>" class="ccs-footer__links ccs-no-print"><%= t(".privacy_link") %></a>
             </div>
             <div class="govuk-footer__meta-item">
               <%= t(".crown_copyright") %>
