--- a/app/assets/stylesheets/components/footer/_footer.scss
+++ b/app/assets/stylesheets/components/footer/_footer.scss
@@ -18,7 +18,7 @@ body {
   flex: 1 0 auto; /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
 }
 
-a.ccs-footer__privacy {
+a.ccs-footer__links {
   background: none;
   border: 0;
   box-shadow: none;
