--- a/app/views/supply_teachers/suppliers/neutral_vendors.html.erb
+++ b/app/views/supply_teachers/suppliers/neutral_vendors.html.erb
@@ -24,6 +24,10 @@
       </div>
     </details>
 
+    <% if @suppliers.length == 1 %>
+      <p class="govuk-body"><%= t('.one_vendor_found_html') %></p>
+    <% end %>
+
     <% SupplyTeachers::Supplier.with_neutral_vendor_rates.each do |supplier| %>
       <div class="neutral-vendor-record">
         <h2 class="govuk-heading-m"><%= supplier.name %></h2>
@@ -38,52 +42,27 @@
           </p>
         <% end %>
 
-        <table class="govuk-table">
-          <thead class="govuk-table__head">
-            <tr class="govuk-table__row">
-              <th class="govuk-table__header" scope="col"><strong><%= t('.column1') %></strong></th>
-              <th class="govuk-table__header govuk-table__header--numeric master-vendor-record__markup-column" scope="col"><strong><%= t('.column2') %><br><%= SupplyTeachers::Rate::TERMS['one_week'] %></strong></th>
-              <th class="govuk-table__header govuk-table__header--numeric master-vendor-record__markup-column" scope="col"><strong><%= t('.column2') %><br><%= SupplyTeachers::Rate::TERMS['twelve_weeks'] %></strong></th>
-              <th class="govuk-table__header govuk-table__header--numeric master-vendor-record__markup-column" scope="col"><strong><%= t('.column2') %><br><%= SupplyTeachers::Rate::TERMS['more_than_twelve_weeks'] %></strong></th>
-            </tr>
-          </thead>
-          <% supplier.rates.each do |rate| %>
-          <tbody class="govuk-table__body">
-              <tr class="govuk-table__row">
-                <th class="govuk-table__header" scope="row"><%= SupplyTeachers::Rate::JOB_TYPES[rate.job_type] %></th>
-                <% 3.times do %>
-                <td class="govuk-table__cell govuk-table__cell--numeric master-vendor-record__markup-column">
-                  <% if rate.percentage_mark_up? %>
-                    <%= number_to_percentage(rate.mark_up * 100, precision: 1) %>
-                  <% else %>
-                    <%= number_to_currency(rate.daily_fee) %>
-                  <% end %>
-                </td>
-                <% end %>
-               </tr>
+        <div class="govuk-grid-row">
+          <div class="govuk-grid-column-two-thirds">
+            <% supplier.rates.each do |rate| %>                
+              <% if rate.percentage_mark_up? %>
+              <p class="govuk-body">
+                <%= t('.mark_up_html', mark_up:number_to_percentage(rate.mark_up * 100, precision: 1)) %>
+              </p>
+              <p class="govuk-body"><%= t('.mark_up_explanation_html') %></p>
+              <% else %>
+              <p class="govuk-body">
+                <%= t('.daily_fee_html', daily_fee:number_to_currency(rate.daily_fee)) %>
+              </p>
+              <p class="govuk-body"><%= t('.daily_fee_explanation_html') %></p>
+              <% end %>
             <% end %>
-          </tbody>
-        </table>
+
+          </div>
+          <div class="govuk-grid-column-one-third"></div>
+        </div>
+
       </div>
     <% end %>
   </div>
-
-<!--
-  <div class="govuk-grid-column-full">
-    <h1 class="govuk-heading-xl cmp-page-heading"><%= t('.header') %></h1>
-    <% SupplyTeachers::Supplier.with_neutral_vendor_rates.each do |supplier| %>
-      <h2 class="govuk-heading-m"><%= supplier.name %></h2>
-      <% supplier.rates.each do |rate| %>
-        <p>
-          <%= SupplyTeachers::Rate::JOB_TYPES[rate.job_type] %>
-          <% if rate.percentage_mark_up? %>
-            <%= number_to_percentage(rate.mark_up * 100, precision: 1) %>
-          <% else %>
-            <%= number_to_currency(rate.daily_fee) %>
-          <% end %>
-        </p>
-      <% end %>
-    <% end %>
-  </div>
--->
 </div>
