Add a cookie banner.
Shows a cookie banner with javascript on a visitor's first visit
and sets a long-lived cookie to prevent it showing again.

The cookie is named to match the existing cookie name on the CCS
website and cookie policy.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,13 @@
   <div class="content-except-footer">
     <a href="#main-content" class="govuk-skip-link"><%= t('.skip') %></a>
 
+      <div class="govuk-width-container" style="display:none" id="cookie_banner">
+        <div class="govuk-phase-banner ccs-no-print">
+            <p class="govuk-phase-banner__content">
+          Crown Marketplace uses cookies to make the site simpler. Read <a href="/cookies">more about cookies</a></p>
+        </div>
+      </div>
+
     <header class="govuk-header" role="banner" data-module="header">
       <div class="govuk-header__container govuk-width-container">
 
