--- a/app/views/home/cookies.html.erb
+++ b/app/views/home/cookies.html.erb
@@ -87,6 +87,21 @@
 
 <p>You can <a href="https://tools.google.com/dlpage/gaoptout">opt-out of Google Analytics</a></p>
 
+<h3>Our introductory message</h3>
+
+<p>You may see a pop-up welcome message when you first visit CCS. We’ll store a cookie so that your computer knows you’ve seen it and knows not to show it again.</p>
+
+<table>
+<thead>
+<tr>
+<th>Name</th><th>Purpose</th><th>Expires</th>
+</tr>
+</thead>
+<tr>
+<td>seen_cookie_message</td><td>Saves a message to let us know that you’ve seen our cookie message</td><td>2 years</td>
+</tr>
+</table>
+
 <h3>Other services</h3>
 
 <p>This policy is for CCS only. When you go to a service run by a different organisation, they may have their own cookies policy.</p>
