Move error page text to locale file

--- a/app/views/errors/404.html.erb
+++ b/app/views/errors/404.html.erb
@@ -1,7 +1,7 @@
 <div class="govuk-body">
-<h1>Errors#404</h1>
+<h1><%= t(".title") %></h1>
 <div>
-  <h1>The page you were looking for doesn’t exist.</h1>
-  <p>You may have mistyped the address or the page may have moved.</p>
+  <h1><%= t(".header") %></h1>
+  <p><%= t(".explanation") %></p>
 </div>
 </div>
