--- a/app/views/errors/422.html.erb
+++ b/app/views/errors/422.html.erb
@@ -1,7 +1,7 @@
 <div class="govuk-body">
-<h1>Errors#422</h1>
+<h1><%= t(".title") %></h1>
 <div>
-  <h1>The change you wanted was rejected.</h1>
-  <p>Maybe you tried to change something you didn’t have access to.</p>
+  <h1><%= t(".header") %></h1>
+  <p><%= t(".explanation") %></p>
 </div>
 </div>
