--- a/app/views/errors/maintenance.html.erb
+++ b/app/views/errors/maintenance.html.erb
@@ -1,4 +1,4 @@
 <div class="govuk-body">
-<h1>Service unavailable</h1>
-<p>You will be able to use the service later.</p>
+<h1><%= t(".title") %></h1>
+<p><%= t(".explanation") %></p>
 </div>
