--- a/app/views/errors/500.html.erb
+++ b/app/views/errors/500.html.erb
@@ -1,6 +1,6 @@
 <div class="govuk-body">
-<h1>Errors#500</h1>
+<h1><%= t(".title") %></h1>
 <div>
-  <h1>We’re sorry, but something went wrong.</h1>
+  <h1><%= t(".header") %></h1>
 </div>
 </div>
