--- a/app/views/management_consultancy/gateway/index.html.erb
+++ b/app/views/management_consultancy/gateway/index.html.erb
@@ -2,7 +2,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">CCS Marketplace private beta</h1>
+      <h1 class="govuk-heading-xl"><%= t(".heading") %></h1>
 
       <p><%= t('.cmp_support_email_html', link: support_email_link(t('.cmp_support_aria_label'))) %></p>
 
