Update DfE Sign-in contact address
"The address to contact is info@ for everything in first instance -
they'll triage and pass internally to supplyteachers@ if needed."

--- a/app/views/supply_teachers/gateway/index.html.erb
+++ b/app/views/supply_teachers/gateway/index.html.erb
@@ -18,12 +18,12 @@
 
         <p>
           <%= t('.dfe_signin.create_account_html',
-                email: 'supplyteachers@crowncommercial.gov.uk') %>
+                email: 'info@crowncommercial.gov.uk') %>
         </p>
 
         <p>
           <%= t('.dfe_signin.outside_england_html',
-                email: 'supplyteachers@crowncommercial.gov.uk') %>
+                email: 'info@crowncommercial.gov.uk') %>
         </p>
       <% end %>
 
