Add pro rata supplier day rate to temp-to-perm results page
In an attempt to clarify how the fee is calculated when the worker works
fewer than 5 days per week.

I wonder whether it'd be clearer to adjust the number of days
required/given (e.g. working 2 days a week would mean that 8 days notice
are required - 4 weeks x 2 days per week) instead of adjusting the day
rate. I've started exploring this in another branch but it's taking
quite a while so I'm making this change for now.

--- a/app/views/supply_teachers/home/_between_9_and_12_weeks_and_enough_notice.html.erb
+++ b/app/views/supply_teachers/home/_between_9_and_12_weeks_and_enough_notice.html.erb
@@ -24,6 +24,13 @@
           markup_rate: number_to_percentage(calculator.markup_rate * 100, precision: 1),
           day_rate: number_to_currency(calculator.day_rate)) %>
   </li>
+  <% if calculator.days_per_week < TempToPermCalculator::Calculator::MAXIMUM_NUMBER_OF_WORKING_DAYS_PER_WEEK %>
+    <li>
+      <%= I18n.t('supply_teachers.home.temp_to_perm_fee.daily_supplier_fee_pro_rata',
+                 fee: number_to_currency(calculator.working_day_supplier_fee),
+                 days_per_week: calculator.days_per_week) %>
+    </li>
+  <% end %>
   <li>
     <%= t('supply_teachers.home.temp_to_perm_fee.total_fee',
           fee: number_to_currency(calculator.fee)) %>
