Extract display_notice_period_required helper method

--- a/app/views/supply_teachers/home/_between_9_and_12_weeks_and_not_enough_notice.html.erb
+++ b/app/views/supply_teachers/home/_between_9_and_12_weeks_and_not_enough_notice.html.erb
@@ -19,8 +19,7 @@
           days: calculator.chargeable_working_days_based_on_early_hire) %>
   </li>
   <li>
-    <%= t('supply_teachers.home.temp_to_perm_fee.notice_period_required',
-          days: calculator.days_notice_required) %>
+    <%= display_notice_period_required(calculator) %>
   </li>
   <li>
     <%= t('supply_teachers.home.temp_to_perm_fee.notice_period_given',
