Extract display_notice_period_given helper method

--- a/app/views/supply_teachers/home/_after_12_weeks_and_not_enough_notice.html.erb
+++ b/app/views/supply_teachers/home/_after_12_weeks_and_not_enough_notice.html.erb
@@ -9,10 +9,7 @@
     <%= display_notice_period_required(calculator) %>
   </li>
   <li>
-    <%= t('supply_teachers.home.temp_to_perm_fee.notice_period_given',
-          days: calculator.days_notice_given,
-          notice_date: calculator.notice_date.to_s(:long_with_day),
-          hire_date: calculator.hire_date.to_s(:long_with_day)) %>
+    <%= display_notice_period_given(calculator) %>
   </li>
   <li>
     <%= t('supply_teachers.home.temp_to_perm_fee.lack_of_notice_chargeable_days',
