Extract display_chargeable_days_for_lack_of_notice helper method

--- a/app/views/supply_teachers/home/_between_9_and_12_weeks_and_not_enough_notice.html.erb
+++ b/app/views/supply_teachers/home/_between_9_and_12_weeks_and_not_enough_notice.html.erb
@@ -25,8 +25,7 @@
     <%= display_notice_period_given(calculator) %>
   </li>
   <li>
-    <%= t('supply_teachers.home.temp_to_perm_fee.lack_of_notice_chargeable_days',
-          days: calculator.chargeable_working_days_based_on_lack_of_notice) %>
+    <%= display_chargeable_days_for_lack_of_notice(calculator) %>
   </li>
   <li>
     <%= t('supply_teachers.home.temp_to_perm_fee.total_chargeable_days',
