Extract display_suppliers_daily_fee helper method

--- a/app/views/supply_teachers/home/_between_9_and_12_weeks_and_not_enough_notice.html.erb
+++ b/app/views/supply_teachers/home/_between_9_and_12_weeks_and_not_enough_notice.html.erb
@@ -32,10 +32,7 @@
           days: calculator.chargeable_working_days) %>
   </li>
   <li>
-    <%= t('supply_teachers.home.temp_to_perm_fee.daily_supplier_fee',
-          fee: number_to_currency(calculator.daily_supplier_fee),
-          markup_rate: number_to_percentage(calculator.markup_rate * 100, precision: 1),
-          day_rate: number_to_currency(calculator.day_rate)) %>
+    <%= display_suppliers_daily_fee(calculator) %>
   </li>
   <% if calculator.days_per_week < TempToPermCalculator::Calculator::MAXIMUM_NUMBER_OF_WORKING_DAYS_PER_WEEK %>
     <li>
