--- a/app/views/supply_teachers/home/_within_first_8_weeks.html.erb
+++ b/app/views/supply_teachers/home/_within_first_8_weeks.html.erb
@@ -19,10 +19,7 @@
           days: calculator.chargeable_working_days_based_on_early_hire) %>
   </li>
   <li>
-    <%= t('supply_teachers.home.temp_to_perm_fee.daily_supplier_fee',
-          fee: number_to_currency(calculator.daily_supplier_fee),
-          markup_rate: number_to_percentage(calculator.markup_rate * 100, precision: 1),
-          day_rate: number_to_currency(calculator.day_rate)) %>
+    <%= display_suppliers_daily_fee(calculator) %>
   </li>
   <% if calculator.days_per_week < TempToPermCalculator::Calculator::MAXIMUM_NUMBER_OF_WORKING_DAYS_PER_WEEK %>
     <li>
