--- a/app/views/supply_teachers/home/_between_9_and_12_weeks_and_not_enough_notice.html.erb
+++ b/app/views/supply_teachers/home/_between_9_and_12_weeks_and_not_enough_notice.html.erb
@@ -40,8 +40,7 @@
     </li>
   <% end %>
   <li>
-    <%= t('supply_teachers.home.temp_to_perm_fee.total_fee',
-          fee: number_to_currency(calculator.fee)) %>
+    <%= display_total_fee(calculator) %>
   </li>
 </ul>
 
