Extract display_suppliers_pro_rata_daily_fee? helper method

--- a/app/views/supply_teachers/home/_between_9_and_12_weeks_and_not_enough_notice.html.erb
+++ b/app/views/supply_teachers/home/_between_9_and_12_weeks_and_not_enough_notice.html.erb
@@ -34,7 +34,7 @@
   <li>
     <%= display_suppliers_daily_fee(calculator) %>
   </li>
-  <% if calculator.days_per_week < TempToPermCalculator::Calculator::MAXIMUM_NUMBER_OF_WORKING_DAYS_PER_WEEK %>
+  <% if display_suppliers_pro_rata_daily_fee?(calculator) %>
     <li>
       <%= display_suppliers_pro_rata_daily_fee(calculator) %>
     </li>
