Extract display_working_days_required helper method

--- a/app/views/supply_teachers/home/_between_9_and_12_weeks_and_enough_notice.html.erb
+++ b/app/views/supply_teachers/home/_between_9_and_12_weeks_and_enough_notice.html.erb
@@ -6,7 +6,7 @@
 
 <ul>
   <li>
-    <%= t('supply_teachers.home.temp_to_perm_fee.working_days_required') %>
+    <%= display_working_days_required %>
   </li>
   <li>
     <%= display_working_days(calculator) %>
