--- a/app/views/supply_teachers/suppliers/_master_vendor.html.erb
+++ b/app/views/supply_teachers/suppliers/_master_vendor.html.erb
@@ -23,7 +23,7 @@
     <tbody class="govuk-table__body">
       <% master_vendor.master_vendor_rates_grouped_by_job_type.each do |job_type, rates| %>
         <tr class="govuk-table__row">
-          <th class="govuk-table__header" scope="row"><%= SupplyTeachers::Rate::JOB_TYPES[job_type] %></th>
+          <th class="govuk-table__header" scope="row"><%= SupplyTeachers::JobType[job_type] %></th>
           <% if rates.length == 1 %>
             <% 3.times do %>
               <td class="govuk-table__cell govuk-table__cell--numeric master-vendor-record__markup-column"><%= number_to_percentage(rates.first.mark_up * 100, precision: 1) %></td>
