Use link helper for support link
This configures it once and gives us an aria label.

--- a/app/views/supply_teachers/gateway/index.html.erb
+++ b/app/views/supply_teachers/gateway/index.html.erb
@@ -18,12 +18,12 @@
 
         <p>
           <%= t('.dfe_signin.create_account_html',
-                email: 'info@crowncommercial.gov.uk') %>
+                link: support_email_link(t('.cmp_support_aria_label'))) %>
         </p>
 
         <p>
           <%= t('.dfe_signin.outside_england_html',
-                email: 'info@crowncommercial.gov.uk') %>
+                link: support_email_link(t('.cmp_support_aria_label'))) %>
         </p>
       <% end %>
 
