--- a/app/views/supply_teachers/gateway/index.html.erb
+++ b/app/views/supply_teachers/gateway/index.html.erb
@@ -25,7 +25,7 @@
         </p>
       <% end %>
 
-      <% if Marketplace.supply_teachers_cognito_enabled? %>
+      <% if @cognito_enabled %>
         <%= link_to('Sign in with beta credentials',
                     cognito_sign_in_path,
                     role: 'button',
