--- a/app/views/supply_teachers/gateway/index.html.erb
+++ b/app/views/supply_teachers/gateway/index.html.erb
@@ -24,6 +24,13 @@
                 link: support_email_link(t('.cmp_support_aria_label'))) %>
         </p>
       <% end %>
+
+      <% if Marketplace.supply_teachers_cognito_enabled? %>
+        <%= link_to('Sign in with beta credentials',
+                    cognito_sign_in_path,
+                    role: 'button',
+                    class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8 ga-auth-cognito') %>
+      <% end %>
     </div>
   </div>
 </div>
