--- a/app/views/supply_teachers/suppliers/master_vendors.html.erb
+++ b/app/views/supply_teachers/suppliers/master_vendors.html.erb
@@ -14,15 +14,14 @@
       <div class="govuk-details__text">
         <ul class="govuk-list govuk-list--bullet">
           <li>
-            <%= t('.do_next.further_competition') %>
-          </li>
-          <li>
-            <%= t('.do_next.competition_online') %>
+            <%= t('.do_next.further_competition_html', 
+                advice_url: 'https://www.gov.uk/guidance/buying-for-schools/run-a-mini-competition') %>
+            <%= t('.do_next.competition_online_html', 
+                esourcing_url: 'https://www.gov.uk/government/publications/esourcing-suite-guidance-for-customers') %>
           </li>
           <li>
             <%= t('.do_next.sign_form_html',
-                  form_url: 'https://ccs-agreements.cabinetoffice.gov.uk/sites/default/files/contracts/RM3826%20Supply%20Teachers%20-%20Order%20Form%20Template%20%28Full%20Version%29%20V1.docx',
-                  framework_url: 'https://ccs-agreements.cabinetoffice.gov.uk/contracts/rm3826') %>
+                  form_url: 'https://ccs-agreements.cabinetoffice.gov.uk/contracts/rm3826') %>
           </li>
         </ul>
         <p class="govuk-body">
